keynote speaker bio

--- a/index.html
+++ b/index.html
@@ -165,20 +165,52 @@
 	
 
 	
-    <section id="invited-speakers">
-        <div class="container">
+    <section id="invited-speakers">		
+		<div class="row">
+          <div class="col-lg-12">
+                <h2 class="section-heading text-center">Keynote Talks</h2>
+                <ul class="timeline">
+
+                    <li class="timeline-inverted">
+                        <div class="timeline-image">
+                            <img class="rounded-circle img-fluid" src="img/speakers/2020/James_Larus.jpg" alt="">
+                        </div>
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                                <h4><a target="_blank" href="https://people.epfl.ch/james.larus?lang=en">James Larus, EPFL</a></h4>
+                                <h3 class="keynote-subheading">"Protein Clustering: Parallelizing an Expensive Irregular Computation"</h3>
+                                <!--<h5 class="subheading">8:20-9:20</h5> !-->
+                            </div>
+                            <div class="timeline-body">
+                                <p class="text-muted padding-bottom-15"><strong>Short Bio: </strong>
+                                    James Larus is Professor and Dean of the School of Computer and Communication Sciences (IC) at EPFL (École Polytechnique Fédérale de Lausanne). 
+									Prior to joining IC in October 2013, Larus was a researcher, manager, and director in Microsoft Research for over 16 years and an assistant and associate professor in the Computer Sciences Department 
+									at the University of Wisconsin, Madison. Larus has been an active contributor to numerous communities. 
+									He published over 100 papers (with 9 best and most influential paper awards), received over 40 US patents. 
+									Larus received a National Science Foundation Young Investigator award in 1993 and became an ACM Fellow in 2006. 
+									Larus received his MS and PhD in Computer Science from the University of California, Berkeley in 1989, and an AB in Applied Mathematics from Harvard in 1980.
+                                </p>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+		
+		<div class="container">
             <div class="row">
                 <div class="col-sm-2"></div>
                 <div class="col-lg-8 ">
                     <h2 class="section-heading text-center">Invited Speakers</h2>
                     <ul id="program-committee-list">
                         <li><a href="https://www.soe.ucsc.edu/people/benedict">Benedict Paten, UC Santa Cruz Genomics Institute</a></li>
-                        <li><a href="https://people.epfl.ch/james.larus?lang=en">James Larus, EPFL</a></li>
+<!--                         <li><a href="https://people.epfl.ch/james.larus?lang=en">James Larus, EPFL</a></li>-->
                         <li><a href="https://www.deshawresearch.com/people_hdwdes_gagliardo.html">Joe Gagliardo, D. E. Shaw Research</a></li>
                     </ul>
                 </div>
             </div>
         </div>
+		
     </section>
 	
 	
