--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
             <div class="row">
                 <div class="col-sm-2"></div>
                 <div class="col-lg-8 ">
-                    <h2 class="section-heading text-center">Invited Speakers</h2>
+                    <h2 class="section-heading text-center">Keynote Speakers</h2>
                     <ul id="program-committee-list">
                         <li><a href="https://www.soe.ucsc.edu/people/benedict">Benedict Paten, UC Santa Cruz Genomics Institute</a></li>
 <!--                         <li><a href="https://people.epfl.ch/james.larus?lang=en">James Larus, EPFL</a></li>-->
