--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#invited-speakers">Invited Speakers</a>
+              <a class="nav-link js-scroll-trigger" href="#invited-speakers">Keynote Speakers</a>
 			  <!-- <a class="nav-link js-scroll-trigger" href="#schedule">Schedule</a> -->
             </li>
               <li class="nav-item">
@@ -165,10 +165,26 @@
 	
 
 	
-    <section id="invited-speakers">		
+    <section id="invited-speakers">	
+
+		<div class="container">
+            <div class="row">
+                <div class="col-sm-2"></div>
+                <div class="col-lg-8 ">
+                    <h2 class="section-heading text-center">Keynote Speakers</h2>
+                    <ul id="program-committee-list">
+                        <li><a href="https://www.soe.ucsc.edu/people/benedict">Benedict Paten, UC Santa Cruz Genomics Institute</a></li>
+                         <li><a href="https://people.epfl.ch/james.larus?lang=en">James Larus, EPFL</a></li>
+                        <li><a href="https://www.deshawresearch.com/people_hdwdes_gagliardo.html">Joe Gagliardo, D. E. Shaw Research</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+	
 		<div class="row">
           <div class="col-lg-12">
-                <h2 class="section-heading text-center">Keynote Talks</h2>
+                <h2 class="section-heading text-center">Talks</h2>
                 <ul class="timeline">
 
                     <li class="timeline-inverted">
@@ -197,19 +213,7 @@
             </div>
         </div>
 		
-		<div class="container">
-            <div class="row">
-                <div class="col-sm-2"></div>
-                <div class="col-lg-8 ">
-                    <h2 class="section-heading text-center">Keynote Speakers</h2>
-                    <ul id="program-committee-list">
-                        <li><a href="https://www.soe.ucsc.edu/people/benedict">Benedict Paten, UC Santa Cruz Genomics Institute</a></li>
-<!--                         <li><a href="https://people.epfl.ch/james.larus?lang=en">James Larus, EPFL</a></li>-->
-                        <li><a href="https://www.deshawresearch.com/people_hdwdes_gagliardo.html">Joe Gagliardo, D. E. Shaw Research</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
+
 		
     </section>
 	
