--- a/index.html
+++ b/index.html
@@ -129,8 +129,7 @@
                         <li>Bioinformatics and computational biology-inspired hardware/software trade-offs</li>
                         <li>Software acceleration of computational biology and bioinformatics</li>
                     </ul>
-
-                    <h2>Submission Guidelines</h2>
+                    <h2><br>Submission Guidelines</h2>
                     <h5 class="padding-bottom-10">Interested authors are encouraged to submit papers (2-5 pages) through 
                         <a href="https://easychair.org/conferences/?conf=aacbb2020">EasyChair</a>
                     </h5>
