--- a/index.html
+++ b/index.html
@@ -139,9 +139,9 @@
                         <a href="https://www.hpca-conf.org/2020/hpca-2020-guidelines-for-submissions/">HPCA Guidelines for Submission</a>
                     </p>
 
-                    <!-- <h2>Important Dates</h2>
-                    <h5><u>Submission deadline</u>: <strike>Dec 15th</strike> Dec 25th, 2018, EoD AoE.</h5>
-                    <h5><u>Notification by</u>: Dec 28th, 2018.</h5>
+                     <h2>Important Dates</h2>
+                    <h5><u>Submission deadline</u>: Dec 15th, 2019</h5>
+                    <!--<h5><u>Notification by</u>: Dec 28th, 2018.</h5>
 
                     <h3 class="margin-top-30">Important Notes</h3>
                     <ul>
