--- a/index.html
+++ b/index.html
@@ -114,24 +114,33 @@
                     <h2 class="section-heading text-center">Call For Participation</h2>
                     <h5>
                         This workshop focuses on architecture and design of hardware and software accelerators for computational biology and bioinformatics problems.
-                        <br><br>Topics of interest cover the following:
+                        <br><br>Topics of interest include, but are not limited to the following:
                     </h5>
                     <ul>
-                        <li>Impact of bioinformatics and biology applications on computer architecture research</li>
-                        <li>Bioinformatics and computational biology accelerator architecture and design</li>
-                        <li>3D memory-logic stack based accelerators</li>
-                        <li>Automata processing in bioinformatics and computational biology applications</li>
-                        <li>Associative processing in bioinformatics and computational biology applications</li>
-                        <li>Near-data (in-memory) acceleration of bioinformatics and computational biology applications</li>
+                        <li>Hardware and software algorithms/applications in the fields of computational biology, such as (but not limited to):</li>
+						<ul style="padding-left:20px">
+							<li>Bioinformatics</li>
+							<li>Genomics</li>
+							<li>Proteomics</li>
+							<li>Protein structure prediction</li>
+						</ul>
+                        <li>Bioinformatics and computational biology accelerator architecture and design based on (but not limited to):</li>
+						<ul style="padding-left:20px">
+							<li>3D memory-logic stack</li>
+							<li>Automata processing</li>
+							<li>Near-data (in-memory) processing</li>
+							<li>FPGAs and reconfigurable</li>
+						</ul>
                         <li>Emerging memory technologies and their impact on bioinformatics and computational biology</li>
-                        <li>Embedded and reconfigurable architectures</li>
-                        <li>Field programmable logic based accelerators</li>
-                        <li>Bioinformatics and computational biology-inspired hardware/software trade-offs</li>
-                        <li>Software acceleration of computational biology and bioinformatics</li>
+						<li>Impact of bioinformatics and biology applications on computer architecture research</li>
+						<li>Bioinformatics and computational biology-inspired hardware/software trade-offs</li>
                     </ul>
                     <h2><br>Submission Guidelines</h2>
                     <h5 class="padding-bottom-10">Interested authors are encouraged to submit papers (2-5 pages) through 
                         <a href="https://easychair.org/conferences/?conf=aacbb2020">EasyChair</a>
+					<ul>
+                        <li><h6>Submitting and presenting a paper in the workshop does not preclude publication in other venues.</h6></li>
+                    </ul>
                     </h5>
                     <!-- <h6>For a PDF version of the CFP click here: <a href="CFP/Workshop%20on%20AACBB%20-%202019%20-%20extended%20CFP.pdf" target="_blank">Download CFP</a></h6>
                     <p>All papers will be evaluated based on their relation to the subject, novelty, fundamental insights, experimental evaluation, and potential for long-term impact.</p> -->
@@ -141,14 +150,14 @@
 
                      <h2>Important Dates</h2>
                     <h5><u>Submission deadline</u>: Dec 15th, 2019</h5>
-                    <!--<h5><u>Notification by</u>: Dec 28th, 2018.</h5>
+					
 
+                    <!--<h5><u>Notification by</u>: Dec 28th, 2018.</h5>
                     <h3 class="margin-top-30">Important Notes</h3>
                     <ul>
                         <li><h6>Submitting and presenting a paper in the workshop does not preclude publication in other venues (there are no proceedings to this workshop).</h6></li>
-                        <li><h6>We will have a poster session. Some papers might be accepted as <i>poster papers</i>.</h6></li>
-                        <li><h6>We plan to have a lightning round, where the authors of a poster paper are given an opportunity to present their work to all attendants in a “lightning” 2 min presentation.</h6></li>
                     </ul>
+
 
                     <h4>A tentative workshop schedule can be found <a href="#schedule">below</a></h4> -->
                    
