--- a/index.html
+++ b/index.html
@@ -90,15 +90,15 @@
             <p class="about-text">Over the last decade, the advent of high-throughput sequencing techniques brought an exponential growth in biosequence database sizes. 
 			With increased throughput demand and popularity of computational biology tools, reducing time-to-solution during computational analysis has become a significant challenge in the path to scientific discovery.<br>
 			
-                <br>Conventional computer architecture is proven to be inefficient for computational biology and bioinformatics tasks. 
-				For example, aligning even several hundred DNA or protein sequences using progressive multiple alignment tools consumes several CPU hours on high performance computer. 
-				Hence, computational biology and bioinformatics rely on hardware accelerators to allow processing to keep up with the increasing amount of data generated from biology applications.<br>
+                <br>Conventional computer architecture has been proven to be inefficient for computational biology and bioinformatics tasks. 
+				For example, 3<sup>rd</sup> generation de-novo assembly of a human genome may take hundreds of hours on a high performance computer. 
+				Hence, computational biology and bioinformatics increasingly rely on hardware accelerators.<br>
 				
-                <br>In a typical application, dominant portion of the runtime is spent in a small number of computational kernels, making it an excellent target for hardware acceleration. 
-				The combination of increasingly large datasets and high performance computing requirements make computational biology prime candidate to benefit from accelerator architecture research. 
-				Potential directions include 3D integration, near-data processing, automata processing, associative processing and reconfigurable architectures.<br>
+                <br>In a typical application, the dominant portion of the runtime is spent in a small number of computational kernels, making it an excellent target for hardware acceleration. 
+				The combination of increasingly large datasets and high performance computing requirements makes computational biology a prime candidate to benefit from accelerator architecture research. 
+				Potential directions include 3D integration, near-data processing, automata processing and reconfigurable architectures.<br>
 				
-				<br>This workshop will focus on architecture and design of hardware accelerators for computational biology and bioinformatics problems. We plan to present and discuss a variety of acceleration techniques,
+				<br>This workshop will focus on the architecture and design of hardware accelerators for computational biology and bioinformatics problems. We plan to present and discuss a variety of acceleration techniques,
 				accelerator architectures and their implications on the development of computational biology.<br>
             </p>
           </div>
