--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                     </p>
 
                      <h2>Important Dates</h2>
-                    <h5><u>Submission deadline</u>: Dec 15th, 2019</h5>
+                    <h5><u>Submission deadline</u>: <del>Dec 15th, 2019 </del><ins><b><font size="6">Dec 30th, 2019</font></b></ins></h5>
 					
 
                     <!--<h5><u>Notification by</u>: Dec 28th, 2018.</h5>
