--- a/index.html
+++ b/index.html
@@ -135,10 +135,9 @@
 						<li>Impact of bioinformatics and biology applications on computer architecture research</li>
 						<li>Bioinformatics and computational biology-inspired hardware/software trade-offs</li>
                     </ul>
-					
-					<h2> HPCA information</h2>
-                    <h6><br><a href = "https://www.hpca-conf.org/2020/registration/">Registration link</a></h6>
-					<h6><br><a href = "https://www.hpca-conf.org/2020/venue-hotel/">Venue and hotel information</a></h6>
+					<h2 class="section-heading text-center">Registraion information</h2>
+                    <h6><br><a href = "https://www.hpca-conf.org/2020/registration/">Workshop registration (minimum requirement is 1-day workshop registration)</a></h6>
+					<h6><br><a href = "https://www.hpca-conf.org/2020/venue-hotel/">HPCA Venue and hotel information</a></h6>
 					
                    <!--  <h5 class="padding-bottom-10">Interested authors are encouraged to submit papers (2-5 pages) through 
                         <a href="https://easychair.org/conferences/?conf=aacbb2020">EasyChair</a>
