--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 						<li>Impact of bioinformatics and biology applications on computer architecture research</li>
 						<li>Bioinformatics and computational biology-inspired hardware/software trade-offs</li>
                     </ul>
-					<h2 class="section-heading text-center">Registraion information</h2>
+					<h2 class="section-heading text-center">Registration information</h2>
                     <h6><br><a href = "https://www.hpca-conf.org/2020/registration/">Workshop registration (minimum requirement is 1-day workshop registration)</a></h6>
 					<h6><br><a href = "https://www.hpca-conf.org/2020/venue-hotel/">HPCA Venue and hotel information</a></h6>
 					
