--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
 					<h2 class="section-heading text-center">Registration information</h2>
                     <h6><br><a href = "https://www.hpca-conf.org/2020/registration/">Workshop registration (minimum requirement is 1-day workshop registration)</a></h6>
 					<h6><br><a href = "https://www.hpca-conf.org/2020/venue-hotel/">HPCA Venue and hotel information</a></h6>
+					<h6><br>Workshop will be held in room Capri</h6>
 					
                    <!--  <h5 class="padding-bottom-10">Interested authors are encouraged to submit papers (2-5 pages) through 
                         <a href="https://easychair.org/conferences/?conf=aacbb2020">EasyChair</a>
