Updated university field for organizers

--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
             <div class="team-member">
               <img class="mx-auto rounded-circle" src="img/team/Leonid.jpg" alt="">
               <h4>Leonid Yavits</h4>
-              <p class="oranizer-email">leonid.yavits@nububbles.com</p>
+              <p class="oranizer-email">Bar Ilan University</p>
                 <p class="text-left"><strong>Short bio:</strong> Leonid Yavits is with Bar Ilan University, Israel. He received his MSc and PhD in Electrical Engineering from the Technion. After graduating, he co-founded VisionTech where he co-designed the world’s first single chip MPEG2 codec. Following VisionTech’s acquisition by Broadcom, he managed Broadcom Israel R&amp;D and co-developed a number of video compression products. Later Leonid co-founded Horizon Semiconductors where he co-designed a Set Top Box-on-chip for cable and satellite TV. Leonid’s research interests include non von Neumann computer architectures, processing in memory, and domain specific accelerators. Leonid's research work has earned several awards; among them: IEEE Computer Architecture Letter Journal Best Paper Awards for 2015 and 2017 and best poster award at ICS High Performance Conference 2017.</p>
             </div>
           </div>
@@ -430,7 +430,7 @@
             <div class="team-member">
               <img class="mx-auto rounded-circle" src="img/team/Yatish.png" alt="">
               <h4>Yatish Turakhia</h4>
-              <p class="oranizer-email">yatisht@stanford.edu</p>
+              <p class="oranizer-email">UCSD</p>
                 <p class="text-left"><strong>Short bio:</strong> Yatish Turakhia is assistant professor of Electrical and Computer Engineering (ECE) at UCSD. He was previously a postdoctoral scholar at the Genomics Institute at UC Santa Cruz and received his PhD student in from Stanford University. His work has been conferred with the best paper award at ASPLOS, IEEE Micro Top picks and NVIDIA graduate fellowship.</p>
             </div>
           </div>
