Updated Bio for keynote speaker and schedule

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                     <tr>
                         <td><strong>15:00 - 15:50</strong></td>
                         <td><strong>Lisa Wu</strong>
-                            <br><i>[TBU]</i></a>
+                            <br><i>Balancing Specificity with Flexibility: How to Accelerate Genomic Analytics with a Composable Framework</i></a>
                         </td>
                     </tr>
 					
@@ -346,7 +346,7 @@
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4><a target="_blank" href="https://cseweb.ucsd.edu/~trosing/">Tajana Rosing</a></h4>
-                                <h3 class="keynote-subheading">Prof of Computer Science and Engineering, Director of System Energy Efficiency Lab, UCSD</h3>
+                                <h3 class="keynote-subheading">Professor of Computer Science and Engineering, Director of System Energy Efficiency Lab, University of California, San Diego</h3>
                                 <!-- <h3 class="keynote-subheading">"Protein Clustering: Parallelizing an Expensive Irregular Computation"</h3> -->
                                 <!--<h5 class="subheading">8:20-9:20</h5> !-->
                             </div>
@@ -366,7 +366,7 @@
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4><a target="_blank" href="http://people.inf.ethz.ch/omutlu/">Onur Mutlu</a></h4>
-                                <h3 class="keynote-subheading">Prof of Computer Science, Zurich ETH and CMU</h3>
+                                <h3 class="keynote-subheading">Professor of Computer Science, ETH Zurich and CMU</h3>
                                 <!-- <h3 class="keynote-subheading">"Building the Human Pangenome"</h3> -->
                                 <!--<h5 class="subheading">8:20-9:20</h5> !-->
                             </div>
@@ -386,12 +386,12 @@ received the Intel Outstanding Researcher Award, IEEE High Performance  Computer
                         </div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4><a target="_blank" href="https://ece.duke.edu/faculty/lisa-wills">Lisa Wills</a></h4>
-                                <h3 class="keynote-subheading">Assistant Professor of Computer Science, Duke</h3>
+                                <h4><a target="_blank" href="https://ece.duke.edu/faculty/lisa-wills">Lisa Wu Wills</a></h4>
+                                <h3 class="keynote-subheading">Assistant Professor of Computer Science, Duke University</h3>
                             </div>
                             <div class="timeline-body">
                                 <p class="text-muted padding-bottom-15"><strong>Short Bio: </strong>
-                                    [TBU]
+                                    Lisa Wu Wills is the Clare Boothe Luce Assistant Professor of Computer Science and ECE at Duke University. Prior to Duke, she was a postdoctoral researcher at the University of California, Berkeley and a research scientist at Intel Labs. Her research interests include computer architecture and microarchitecture, hardware acceleration, hardware-software co-design, emerging applications in big data such as database and graph analytics, healthcare such as genomics analytics, and artificial intelligence such as natural language processing for drug discovery. Wills has a PhD in computer science from Columbia University, a MS in computer science and engineering from the University of Michigan, Ann Arbor, and a BS in computer engineering from the University of Illinois, Urbana-Champaign. She has received an NSF CAREER award, three IEEE Micro Top Picks, and a MICRO best paper award.
                                 </p>
                             </div>
                         </div>
@@ -457,7 +457,7 @@ received the Intel Outstanding Researcher Award, IEEE High Performance  Computer
             <div class="team-member">
               <img class="mx-auto rounded-circle" src="img/team/Yatish.png" alt="">
               <h4>Yatish Turakhia</h4>
-              <p class="oranizer-email">UCSD</p>
+              <p class="oranizer-email">University of California, San Diego</p>
                 <p class="text-left"><strong>Short bio:</strong> Yatish Turakhia is assistant professor of Electrical and Computer Engineering (ECE) at UCSD. He was previously a postdoctoral scholar at the Genomics Institute at UC Santa Cruz and received his PhD student in from Stanford University. His work has been conferred with the best paper award at ASPLOS, IEEE Micro Top picks and NVIDIA graduate fellowship.</p>
             </div>
           </div>
