--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
 
                     <tr>
                         <td><strong>14:50 - 15:40</strong></td>
-                        <td><strong>Lisa Wu</strong>
+                        <td><strong>Lisa Wu Wills</strong>
                             <br><i>Balancing Specificity with Flexibility: How to Accelerate Genomic Analytics with a Composable Framework</i></a>
                         </td>
                     </tr>
