--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                         <td><strong>9:10 - 10:00</strong></td>
                         <td><strong>Onur Mutlu</strong><br>
                                 <i>"Accelerating Genome Analysis"</i>
-                           <a target="_blank" href="./slides/2022/onur-AACB-Keynote-AcceleratingGenomeAnalysis-Jun-18-2022-compressed.pdf">slides</a>
+				(<a target="_blank" href="./slides/2022/onur-AACB-Keynote-AcceleratingGenomeAnalysis-Jun-18-2022-compressed.pdf">slides</a>)</td>
                     </tr>
                     <tr>
                         <td>10:00 - 10:25</td>
