--- a/index.html
+++ b/index.html
@@ -235,8 +235,9 @@
                     <tr>
                         <td>11:30 - 11:55</td>
                         <td>Damla Senol Cali, Saugata Ghose and Onur Mutlu
-                        <br><i>"Accelerating Genome Sequence Analysis via Efficient Hardware/Algorithm Co-Design"</i></td>
-                    </tr>
+                        <br><i>"Accelerating Genome Sequence Analysis via Efficient Hardware/Algorithm Co-Design"</i>
+			    (<a target="_blank" href="./slides/2022/AcceleratingGSA-AACBB22-DamlaSenolCali-061822.pdf">slides</a>)</td>
+		    </tr>
 
 					<tr><td><br></td><td><br></td></tr>
                     
@@ -259,6 +260,7 @@
                         <td>13:50 - 14:15</td>
 			<td>Miquel Moreto and Santiago Marco-Sola<br>
                                 <i>"Accelerating the Wavefront Alignment Algorithm on CPUs, GPUs and FPGAs"</i>
+				(<a target="_blank" href="./slides/2022/WFA.ISCA.v6.pdf">slides</a>)</td>
                             <!-- (<a target="_blank" href="./slides/2020/AACBB2020-v2.pdf">slides</a>, <a target="_blank" href="https://ieeexplore.ieee.org/abstract/document/8891663">paper</a>) -->
                         </td>
                     </tr>
