--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                     <tr>
                         <td>11:05 - 11:30</td>
                         <td>Alireza Mohammadidoost, Kyle Smith and Yatish Turakhia
-                            <br><i>"GPU Acceleration of Pairwise Sequence Alignment Using Wavefront Skipping"</i></td>
+                            <br><i>"GPU Acceleration of Pairwise Sequence Alignment Using Wavefront Skipping"</i>
 			    (<a target="_blank" href="./slides/2022/AMohammadidoost-20220618.pdf">slides</a>)</td>
                     </tr>
 
