Changing 2023 keynote speakers

--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
             <div class="row">
                 <div class="col-sm-2"></div>
                 <div class="col-lg-8 ">
-                    <h2 class="section-heading text-center">Keynote Speakers (tentative)</h2>
+                    <h2 class="section-heading text-center">Keynote Speakers</h2>
 <!--                     <ul id="program-committee-list">
                         <li><a href="https://www.soe.ucsc.edu/people/benedict">Benedict Paten, UC Santa Cruz Genomics Institute</a></li>
                          <li><a href="https://people.epfl.ch/james.larus?lang=en">James Larus, EPFL</a></li>
@@ -342,18 +342,18 @@
 
                     <li class="timeline-inverted">
                         <div class="timeline-image">
-                            <img class="rounded-circle img-fluid" src="img/speakers/2021/rosing.jpeg" alt="">
+                            <img class="rounded-circle img-fluid" src="img/speakers/2023/Kathy.png" alt="">
                         </div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4><a target="_blank" href="https://cseweb.ucsd.edu/~trosing/">Tajana Rosing</a></h4>
-                                <h3 class="keynote-subheading">Professor of Computer Science and Engineering, Director of System Energy Efficiency Lab, University of California, San Diego</h3>
+                                <h4><a target="_blank" href="https://vcresearch.berkeley.edu/faculty/katherine-yelick">Katherine A. Yelick</a></h4>
+                                <h3 class="keynote-subheading">Professor of Electrical Engineering and Computer Science , University of California, Berkeley</h3>
                                 <!-- <h3 class="keynote-subheading">"Protein Clustering: Parallelizing an Expensive Irregular Computation"</h3> -->
                                 <!--<h5 class="subheading">8:20-9:20</h5> !-->
                             </div>
                             <div class="timeline-body">
                                 <p class="text-muted padding-bottom-15"><strong>Short Bio: </strong>
-                                    Tajana Šimunić Rosing is a Full Professor, a holder of the Fratamico Endowed Chair, ACM & IEEE Fellow, and a director of System Energy Efficiency Lab at UCSD. Her research interests are in energy efficient computing, computer architecture, distributed and embedded systems. She is leading a number of projects, including efforts funded by DARPA/SRC JUMP CRISP program, with focus on design of accelerators for analysis of big data including machine learning, image/video processing and bioinformatics; DARPA, NSF and SRC funded projects on Hyperdimensional Computing, SRC funded project acceleration of 3rd generation Fully Homomorphic Encryption, and NSF AI TILOS center projects on federated learning and AI-based chip design. She recently headed the effort on SmartCities that was a part of DARPA and industry funded TerraSwarm center. Tajana led the energy efficient datacenters theme in MuSyC center, and a number of large projects funded by both industry and government focused on power and thermal management.  From 1998 until 2005 she was a full time research scientist at HP Labs while also leading research efforts at Stanford University. She finished her PhD in EE in 2001 at Stanford, concurrently with finishing her Masters in Engineering Management. Her PhD topic was dynamic management of power consumption. Prior to pursuing the PhD, she worked as a senior design engineer at Intel Corporation.
+                                  Katherine (Kathy) Yelick is the Vice Chancellor for Research and the Robert S. Pepper Distinguished Professor of Electrical Engineering and Computer Sciences at UC Berkeley. She is also a Senior Faculty Scientist at Lawrence Berkeley National Laboratory. Yelick's research is in high performance computing, programming languages, compilers, and parallel algorithms. She currently leads the ExaBiome project on scalable tools for analyzing microbial data and co-leads the Berkeley Benchmarking and Optimization (Bebop) group. She is known for her work on partitioned global address space languages, automatic performance tuning, high performance genome analysis. She was the Associate Laboratory Director for Computing Sciences at LBNL from 2010 through 2019 and prior to that led the National Energy Research Scientific Computing Center (NERSC). She is a member of National Academy of Engineering and the American Academy of Arts and Sciences, and she is a Fellow of both the Association for Computing Machinery and the American Association for the Advancement of Science. 
                                 </p>
                             </div>
                         </div>
@@ -362,43 +362,18 @@
 					
 					<li class="timeline-inverted">
                         <div class="timeline-image">
-                            <img class="rounded-circle img-fluid" src="img/speakers/2021/omutlu.jpg" alt="">
+                            <img class="rounded-circle img-fluid" src="img/speakers/2023/PhotoDLavenier.jpg" alt="">
                         </div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4><a target="_blank" href="http://people.inf.ethz.ch/omutlu/">Onur Mutlu</a></h4>
-                                <h3 class="keynote-subheading">Professor of Computer Science, ETH Zurich and CMU</h3>
+                                <h4><a target="_blank" href="https://lavenier.net/homepage/">Dominique Lavenier</a></h4>
+                                <h3 class="keynote-subheading">CNRS research Director, IRISA/INRIA</h3>
                                 <!-- <h3 class="keynote-subheading">"Building the Human Pangenome"</h3> -->
                                 <!--<h5 class="subheading">8:20-9:20</h5> !-->
                             </div>
                             <div class="timeline-body">
                                 <p class="text-muted padding-bottom-15"><strong>Short Bio: </strong>
-                                    Onur Mutlu is a Professor of Computer Science at ETH Zurich.
-                                    He is also a faculty member at Carnegie Mellon University,
-                                    where he previously held the Strecker Early Career Professorship. 
-                                    His current broader research interests are in computer architecture, systems, hardware security, and bioinformatics.
-                                    A variety of techniques he, along with his group and collaborators,
-                                    has invented over the years have influenced industry and have been employed in commercial microprocessors
-                                    and memory/storage systems.
-                                    He obtained his PhD and MS in ECE from the University of Texas at Austin and BS degrees in Computer Engineering
-                                    and Psychology from the University of Michigan, Ann Arbor.
-                                    He started the Computer Architecture Group at Microsoft Research (2006-2009), and held various product
-                                    and research positions at Intel Corporation, Advanced Micro Devices, VMware, and Google.
-                                    He received the Intel Outstanding Researcher Award, IEEE High Performance  Computer Architecture Test of Time Award,
-                                    the IEEE Computer Society Edward J. McCluskey Technical Achievement Award, ACM SIGARCH Maurice Wilkes Award,
-                                    the inaugural IEEE Computer Society Young Computer Architect Award,  the inaugural Intel Early Career Faculty Award,
-                                    US National Science Foundation CAREER Award, Carnegie Mellon University Ladd Research Award,
-                                    faculty partnership awards from various companies, and a healthy number of best paper or "Top Pick" paper
-                                    recognitions at various computer systems, architecture, and security venues.
-                                    He is an ACM Fellow "for contributions to computer architecture research, especially in memory systems",
-                                    IEEE Fellow for "contributions to computer architecture research and practice",
-                                    and an elected member of the Academy of Europe (Academia Europaea).
-                                    His computer architecture and digital logic design course lectures and materials are
-                                    freely available on <a href="https://www.youtube.com/OnurMutluLectures">YouTube</a>, and his research group makes a wide
-                                    variety of software and hardware artifacts
-                                    freely available online <a href="https://safari.ethz.ch/">https://safari.ethz.ch/</a>.
-                                    For more information,
-                                    please see his webpage at <a href="https://people.inf.ethz.ch/omutlu/">https://people.inf.ethz.ch/omutlu/</a>.
+                                  Dominique Lavenier is a CNRS research fellow and member of the GenScale bioinformatics team at IRISA/INRIA, Rennes, which he created in 2012. His current research interests include bioinformatics, data structures, genomics, parallelism, algorithm optimization, in-memory processing and DNA storage. In the past, he has designed several hardware prototypes for molecular biology, bioinformatics or genomic applications, including VLSI chips and FPGA + Memory architectures. Since 2015, he has been collaborating continuously with UPMEM to investigate different ways to parallelize genomic algorithms on in-memory processing systems.
                                 </p>
                             </div>
                         </div>
@@ -406,11 +381,11 @@
 
                     <li class="timeline-inverted">
                         <div class="timeline-image">
-                            <img class="rounded-circle img-fluid" src="img/speakers/Damla.jpg" alt="">
+                            <img class="rounded-circle img-fluid" src="img/speakers/2023/Damla.jpg" alt="">
                         </div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4><a target="_blank" href="https://ece.duke.edu/faculty/lisa-wills">Damla Senol Cali</a></h4>
+                                <h4><a target="_blank" href="https://damlasenolcali.github.io/">Damla Senol Cali</a></h4>
                                 <h3 class="keynote-subheading">Hardware Acceleration specialist, Bionano Genomics</h3>
                             </div>
                             <div class="timeline-body">
